Server list z-index fix

--- a/src/admin/AdminMain.sass
+++ b/src/admin/AdminMain.sass
@@ -67,6 +67,7 @@
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.5)
   max-height: 300px
   overflow-y: auto
+  z-index: 10000
 
 .AdminName-sidebar-server-list a
   display: flex
